test/good/functions/func2.px

func fact(Int n) Int def
    if n <= 1 do return 1
    return n * fact(n-1)

print fact(7)
