test/bad/functions/nested4.px

if true do
    func h() def
        return

h()
